--- a/index.html
+++ b/index.html
@@ -3,9 +3,10 @@
   <head>
     <meta charset="utf-8">
     <title>v-ui</title>
+    <link href='https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300,700' rel='stylesheet' type='text/css'>
   </head>
   <body>
-    <app></app>
-    <script src="./dist/dev.js"></script>
+    <div id="app"></div>
+    <script src="./dist/index.js"></script>
   </body>
 </html>
