--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 }
       </style>
     <script src="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.1.0/highlight.min.js"></script>
-    <link href='https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300,700' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Open+Sans:300,400,700|Open+Sans+Condensed:700,300' rel='stylesheet' type='text/css'>
 
   </head>
   <body>
